# artosyntool

./: .gitignore  Cargo.toml  build_92.py  build_92.sh  example_reg_config.json  post_process.py
ar_dbg_client/: Cargo.toml  README.md
ar_dbg_client/examples/: simple_osd.rs  simple_trace.rs
ar_dbg_client/src/: client.rs  lib.rs  main.rs  osd.rs  protocol.rs  web.rs
ar_dbg_client/static/: index.html
logcat/: Cargo.toml  README.md
logcat/src/: export.rs  local.rs  main.rs  osd_meta.rs  reg_meta.rs  remote.rs
rslog/: .gitignore  Cargo.toml  README.md  rslog.h
rslog/src/: constants.rs  entry.rs  header.rs  lib.rs  main.rs  stream_log.rs  stream_storage.rs  tests.rs  writer.rs
rslog/tests/: logcat_simulation_test.rs
