[workspace]
resolver = "2"
members = [
    "ar_dbg_client",
    "rslog",
    "logcat",
]

[workspace.lints.rust]
# 可以在这里添加工作区级别的 lint 配置

# 共享的工作空间依赖（可选）
[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }

[profile.release]
lto = true
