[package]
name = "ar_dbg_client"
version = "0.1.0"
edition = "2021"
description = "Artosyn Debug Service Client - OSD Data Receiver"

[lints]
workspace = true

[dependencies]
tokio = { version = "1", features = ["full"] }
bytes = "1.11"
thiserror = "1.0"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
