[package]
name = "rslog"
version = "0.1.0"
edition = "2021"
description = "Embedded circular log storage with compression and power-safe design"

[lints]
workspace = true

[dependencies]
# 压缩库 - lz4 非常适合嵌入式，压缩/解压速度快
lz4_flex = "0.12"

# CRC32 校验 - 用于数据完整性验证
crc32fast = "1.5"



[features]
default = []
# 如果目标平台不支持 mmap，可以禁用
no-mmap = []
